2010-01-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13158: Inconsistent Tabs

2010-01-05  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13149: Empty page after "Save and exit" of changing existing DS/TO
	* Follow-up to bugfix #2081: Using static DSes for Page and FCE
	* Fixed bug: #4171: New Record Wizard confusing selection -> Hidding 'Default template'

2010-01-05  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #13115: Bugfix: Drag and Drop involves the "New and Browse" icons and gives wrong results

2010-01-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13105: Bugfix: Cut and paste element
	* Fixed bug: #2081: Using static DSes for Page and FCE

2009-12-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13089: Mapping: when creating a field eType TyposcriptObjectPath, add and then change the objectPath will be written to DS
	* Fixed bug: #13032: Inform if page use content_from_pid
	* Fixed bug: #13083: Not possible to update TS Object PATH

2009-12-28  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #6378: When mapping to <div class="some a"> TV thinks it's an <a> tag

2009-12-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13103: With beLayout in TO FCEs with Container for elements are rendered wrong

2009-12-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12933: Show create new field also if edit a field in mapping module
	* Fixed bug: #13091: Bring buttons in mapping module back to the left
	* Follow-up to bugfix #13067: Missing CSS classes in page module

2009-12-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #6244: FCE backend-labels are not localized in the preview
	* Fixed bug: #13082: New CSS... for beTemplateCell CLASS (Follow-up to #13067)
	* Fixed bug: #9499: Simultanious edits not possible
	* Fixed bug: #13077: Enable Header for FCE's (optional)

2009-12-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13067: Missing CSS classes in page module